--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
