--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/open-sans-condensed": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-mapbox-gl/maps": "github:react-native-mapbox-gl/maps",
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
