--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-maps": "0.27.1",
+    "expo-location": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
