--- a/package.json
+++ b/package.json
@@ -16,22 +16,26 @@
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
+    "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-dotenv": "^2.2.0",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.15.0",
     "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
-    "redux-thunk": "^2.3.0",
-    "react-native-maps": "0.27.1",
-    "expo-location": "~8.2.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
