--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "metro-react-native-babel-preset": "^0.61.0",
     "native-base": "^2.13.13",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-dotenv": "^2.2.0",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-places-autocomplete": "^1.8.0",
     "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
